# resistance-fr

./: .env.example  .gitignore  .pylintrc  .pytest.ini  .style.yapf  CHANGELOG.md  README.md  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt  resistance.py  run.bash
.github/: CONTRIBUTING.md
.github/workflows/: python-package-conda.yml  python-package.yml
scripts/: details.py
src/: __init__.py  version.py
src/commands/: __init__.py  bot_log.py  poll.py  sudo.py  utils.py  xp.py
src/core/: client.py
src/db/: database.py
src/events/: auto_response_data.py  tasks.py
src/helper/: __init__.py  auto_numbered.py  cog.py  constants.py  fmt.py  formatter.py  logger.py
src/messages/: __init__.py  embedder.py  sender.py  timestamp.py  view.py
tests/: dummy_test.py
